--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"deploy": "gh-pages -d build",
-		"predeploy" "npm run build"
+		"predeploy": "npm run build"
 	},
 	"eslintConfig": {
 		"extends": [
